#261 Fix Desktop video black screen by writing into Skia-owned pixels
The previous attempt at #243 used Bitmap.installPixels(info, ByteArray,
rowBytes) on the premise that the bitmap would re-read the JVM array on
every draw. Skiko's JVM impl mallocs a fresh native buffer and copies
the JVM array into it once at install time, then installs THAT buffer
as the bitmap's pixel storage. Per-frame writes to the JVM array never
reach the bitmap, so the bitmap kept drawing the zero-initialized
snapshot from getBufferFormat — black frames.

Instead, allocPixels lets Skia own the native pixel storage; peekPixels
gives us its address. We cache vlcj's direct ByteBuffer address via the
Buffer.address field offset. Per frame: one Unsafe.copyMemory native to
native memcpy, notifyPixelsChanged, then asComposeImageBitmap (a thin
wrapper). This actually achieves the zero-allocation steady state #243
was aiming for: no JVM byte-array marshalling and no per-frame Skia
bitmap allocation.

sun.misc.Unsafe access works without --add-opens flags on JDK 17:
jdk.unsupported opens sun.misc to all unnamed modules by default, and
reading Buffer.address via Unsafe.objectFieldOffset bypasses module
checks since getDeclaredField is metadata-only and Unsafe doesn't go
through setAccessible.

Closes #261

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>